--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -7,9 +7,9 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>509399610383-1l0ertaqe3ate2je4fj36541vtifephl.apps.googleusercontent.com</string>
+	<string>509399610383-3kge2o61pu324l4i7lobre7mgh6u25lg.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.509399610383-1l0ertaqe3ate2je4fj36541vtifephl</string>
+	<string>com.googleusercontent.apps.509399610383-3kge2o61pu324l4i7lobre7mgh6u25lg</string>
 	<key>API_KEY</key>
 	<string>AIzaSyAxGkdBDCVjrS8VrA6RXrSqeBQQamRPFw0</string>
 	<key>GCM_SENDER_ID</key>
@@ -17,7 +17,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.newproj</string>
+	<string>YoungApps.uber</string>
 	<key>PROJECT_ID</key>
 	<string>mu-ridesharing</string>
 	<key>STORAGE_BUCKET</key>
@@ -33,7 +33,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:509399610383:ios:ddde5590e35dc515</string>
+	<string>1:509399610383:ios:ed8580dcd2bec84e</string>
 	<key>DATABASE_URL</key>
 	<string>https://mu-ridesharing.firebaseio.com</string>
 </dict>
