--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dev_dependencies:
   secure_string: ^2.0.0
   firebase_auth: ^0.5.15
   latlong: ^0.5.3
+  cached_network_image: ^0.4.1+1
+  camera: ^0.2.1
+
 
 
 
