--- a/ios/Runner/GoogleService-Info(REAL).plist
+++ b/ios/Runner/GoogleService-Info(REAL).plist
@@ -7,21 +7,21 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>25981611197-i06i26qsh4alap3nr2oo5vob1os0mfgd.apps.googleusercontent.com</string>
+	<string>509399610383-3kge2o61pu324l4i7lobre7mgh6u25lg.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.25981611197-i06i26qsh4alap3nr2oo5vob1os0mfgd</string>
+	<string>com.googleusercontent.apps.509399610383-3kge2o61pu324l4i7lobre7mgh6u25lg</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDaD4a6svIU_2bIt5ddk_VinYERvKG-mcI</string>
+	<string>AIzaSyAxGkdBDCVjrS8VrA6RXrSqeBQQamRPFw0</string>
 	<key>GCM_SENDER_ID</key>
-	<string>25981611197</string>
+	<string>509399610383</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.youngApps.uber</string>
+	<string>YoungApps.uber</string>
 	<key>PROJECT_ID</key>
-	<string>link-ridesharing</string>
+	<string>mu-ridesharing</string>
 	<key>STORAGE_BUCKET</key>
-	<string>link-ridesharing.appspot.com</string>
+	<string>mu-ridesharing.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<true></true>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -33,8 +33,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:25981611197:ios:774236cab0dde510</string>
+	<string>1:509399610383:ios:ed8580dcd2bec84e</string>
 	<key>DATABASE_URL</key>
-	<string>https://link-ridesharing.firebaseio.com</string>
+	<string>https://mu-ridesharing.firebaseio.com</string>
 </dict>
 </plist>
