--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,6 @@ dependencies:
     sdk: flutter
 
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   #cupertino_icons: ^0.1.0
@@ -40,6 +39,8 @@ dev_dependencies:
   cached_network_image: ^0.4.1+1
   camera: ^0.2.1
   photo_view: ^0.0.7
+  geolocator: ^1.6.5
+
 
 
 
@@ -55,6 +56,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -75,6 +77,16 @@ flutter:
    - assets/iphone100.png
    - assets/signal100.png
    - assets/logoSignal.png
+
+  fonts:
+  - family:          Link
+    fonts:
+    - asset:        assets/fonts/BaiJamjuree-Bold.ttf
+
+
+
+
+
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
