--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,7 +48,8 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             ndk {
-                abiFilters "x86", "armeabi-v7a", "armeabi"
+                abiFilters "x86", "armeabi-v7a", "armeabi", "arm", "arm64", "x86_64"
+
                 //abiFilters ABI_FILTERS
             }
             signingConfig signingConfigs.release
@@ -56,7 +57,7 @@ android {
 
         debug {
             ndk {
-                abiFilters "x86", "armeabi-v7a", "armeabi"
+                abiFilters "x86", "armeabi-v7a", "armeabi", "arm", "arm64", "x86_64"
                 //abiFilters ABI_FILTERS
             }
         }
